[package]
name = "circular_doubly_ll_solana"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
solana-program = "2.0.9"

[dev-dependencies]
solana-program-test = "2.0.9"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
solana-sdk = "2.0.9"

[features]
no-entrypoint = []

[lib]
name = "circular_doubly_ll_solana"
crate-type = ["cdylib", "lib"]
